# ragx

./: .coverage  .gitignore  .yamllint  AGENTS.md  Makefile  README.md  SECURITY.md  build_cpp.sh  pyproject.toml  pytest.ini  ragx_md_support.patch  requirements.txt
.github/workflows/: .ci.yml.kate-swp  ci.yml  codeql.yml
PATCHES/: makefile_acceptance.patch
POSTEXECUTION/P3/: 07b_budget_guards_and_runner_integration.yaml-20250509-gpt5codex.md  07b_budget_guards_and_runner_integration.yaml-20250511-gpt5codex.md  07b_budget_guards_and_runner_integration.yaml-20250518-gpt5codex.md  07b_budget_guards_and_runner_integration.yaml-3d661f4a-0b91-4ab8-b1b1-972c23901e92.md
PREVIEW/P3/: 07b_budget_guards_and_runner_integration.yaml-20250509-gpt5codex.md  07b_budget_guards_and_runner_integration.yaml-20250511-gpt5codex.md  07b_budget_guards_and_runner_integration.yaml-20250518-gpt5codex.md  07b_budget_guards_and_runner_integration.yaml-3d661f4a-0b91-4ab8-b1b1-972c23901e92.md
REVIEW/P3/: 07b_budget_guards_and_runner_integration.yaml-20250509-gpt5codex.md  07b_budget_guards_and_runner_integration.yaml-20250511-gpt5codex.md  07b_budget_guards_and_runner_integration.yaml-20250518-gpt5codex.md  07b_budget_guards_and_runner_integration.yaml-3d661f4a-0b91-4ab8-b1b1-972c23901e92.md
apps/: __init__.py
apps/mcp_server/: README.md  __init__.py  __main__.py  app.py  cli.py  envelope.py  http.py  http_app.py  logging.py  models.py  observability.py  service.py  stdio.py
apps/toolpacks/: README.md  __init__.py  executor.py  loader.py
codex/: PROMPT_DESIGNS.md  TODO.md  __init__.py
codex/agents/: 04x_toolpacks_dev_notes.md  05x_toolpacks_dev_notes.md  CODEX_BOOTSTRAP.md  RUN_POLICY.md
codex/code/: __init__.py
codex/specs/: .ragx_master_spec.yaml.kate-swp  flow_runner_spec.yaml  flow_runner_spec_ext.yaml  patch.patch  ragx_master_spec.yaml
codex/templates/: codex_consolidate.j2  single_task.j2
codex/tools/: promote_to_production.py  promote_to_production.sh
cpp/: CMakeLists.txt  ragcore_cpp_module.cpp
cpp/include/ragcore/: cpp_backend.hpp
cpp/src/: cpp_backend.cpp
docs/: 07b_budget_guards_and_runner_integration.yaml.md  ARCHITECTURE.md  README.md  ingestion.md  merge_semantics.md  native_backend_setup.md  release_engineering.md  runner_templating.md  serving_node.md  toolpacks_executor.md  toolpacks_loader.md  vdb_interfaces.md  vectordb_backends.md
docs/components/: mcp-server.md  (+2 more)
flows/: example.react_self_refine.yaml
pkgs/: __init__.py
ragcore/: README.md  __init__.py  cli.py  interfaces.py  registry.py
scripts/: __init__.py  build_cpp.sh  codex_next_tasks.py  diff_core_tool_logs.py  diff_envelope_validation_logs.py  diff_mcp_server_logs.py  ensure_green.sh  verify_example_operations.py  verify_example_operations_active.lst
tests/: README.md  conftest.py
(+848 files in other folders)
