[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
exclude = ["^tests/"]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[project]
name = "ragx"
dynamic = ["version"]
dependencies = [
    "jinja2",
    "jsonschema",
    "numpy",
    "pyyaml",
    "packaging",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "yamllint",
    "pybind11",
]
